# ic

./: .gitignore  Cargo.toml  LICENSE  changelog.md  outline.md  readme.md
src/: blockcopy.rs  copier.rs  foldersignature.rs  gui.rs  ic.rs  main.rs  messages.rs  nullstream.rs  options.rs
