[package]
name = "ic"
version = "0.1.2"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
indicatif = "0.17.0-beta.1"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"